# hydropulser-database-scripts

./: .gitignore  .gitmodules  README.md  calorimetry_setup_rdf.ttl  foams_table.xlsx  generate_UUID7s.py  generate_foam_db_files.py  generate_hydraulic_accumulator_db_files.py  generate_pump_files.py  generate_sensor_db_files.py  generate_valve_files.py  gitlab_db_component.py  gitlab_db_mdgen.py  gitlab_db_sensor.py  gitlab_db_substance.py  gitlab_db_test_rig_resilience_demonstrator.py  h52rdf.py  info_Messtechnik_Uebersicht_FST_Wetterich.xlsx  map_legacy_h5_to_rdf.py  measurement_results.py  measurement_setup.py  origin_uuids_measurement_equipment.csv  pumps_table.xlsx  pyproject.toml  sensor_table.xlsx  sensor_table_EXAMPLE.xlsx  sensor_table_logan.xlsx  shapes-mapper.py  test.md  test.ttl  uuidgen.py  valves_table.xlsx
ARCHIVE/: map_legacy_h5_to_rdf.py
ARCHIVE/data/: equipment.ttl
ARCHIVE/shape-cache/: Property.shacl.ttl  Thing.shacl.ttl
ARCHIVE/shape-target-tests/: SPARQLbased_target.py  SPARQLbased_target_type.py  shapesGraph_target.py
data/: 2022-11-15-testlauf.h5  KF_80_2900.setup.ttl  KF_80_2900.ttl
excel_tables/: hydrospeicher_id_list.xlsx  sensor_table.xlsx  sensor_table_EXAMPLE.xlsx
excel_tables_automation_scripts/: generate_hydraulic_accumulator_db_files.py  generate_sensor_db_files.py
hardcoded_generate_scripts/: generate_UUID7s.py  gitlab_db_component.py  gitlab_db_component_accumulator_testrig.py  gitlab_db_component_gascylinder.py  gitlab_db_component_gaszylinder.py  gitlab_db_component_pump.py  gitlab_db_foam_substance.py  gitlab_db_hydraulic_accumulator.py  gitlab_db_mdgen.py  gitlab_db_sensor.py  gitlab_db_substance.py  gitlab_db_substance_tellus_oil.py  gitlab_db_valve_sensor_combination.py
hardcoded_generate_scripts/gitlab_db_test_rigs/: gitlab_db_test_rig_hydropulser.py  gitlab_db_test_rig_sirupmischanlage.py
hardcoded_generate_scripts/oil_Shell/SHELL_Dichte/: Dichte_SHELL.xlsx
hardcoded_generate_scripts/oil_Shell/SHELL_Kinematische Viskosität/: Thumbs.db  Viskosität_SHELL.xlsx
measurement_RDF/: generate_measurement_RDF.py  test_generate_measurement_RDF.py
measurement_RDF/515_231122_gaszylinder_10bar/: 018f3e2d-29a0-7e99-afe5-17eae266ef7f_gaszylinder_p0_10.15bar_p1_14bar_Ta_20C_harmonisch_02.00mm_02.50Hz.mat
oil_Shell/SHELL_Dichte/: Dichte_SHELL.m
oil_Shell/SHELL_Kinematische Viskosität/: regression_plot_shell.m
pyKRAKEN/: kraken.py
shape-cache/: AIMS-AP.shacl.ttl  PhysicalObject.shacl.ttl  Property.shacl.ttl  Quantity.shacl.ttl  Thing.shacl.ttl
