[tool.poetry]
name = "hydropulser_database_scripts"
version = "0.1.0"
description = ""
license = ""
authors = ["Sebastian Neumeier <sebastian.neumeier@stud.tu-darmstadt.de>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]
packages = [
    {include = "hydropulser_database_scripts"}
]

[tool.poetry.dependencies]
python = ">=3.09,<3.13"
rdflib = "^6.2.0"
pyshacl = "^0.20.0"
uuid6 = "^2022.10.25"
pandas = "^2.1.1"
numpy = "^1.26.1"
openpyxl = "^3.1.2"
fstlabelcreator = {path = "fst-label-creator"}

[tool.poetry.group.examples.dependencies]
h5py = "^3.7.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
